--- a/Fichas_regiones.Rmd
+++ b/Fichas_regiones.Rmd
@@ -280,7 +280,7 @@ principal_porcentaje_asi<-(asi_principal_4_suma/asi_2022_mun)*100
 
 ggplot(anual_asi) +
   aes(x =as.factor(Año), y = Total) +
-  geom_col(fill = "#030303") +
+  geom_col(fill = "#f21d72") +
   theme_minimal()+
   geom_text(aes(label=comma(Total)), size=3.0)+
   scale_fill_hue(direction = 1) +
